some error handled

--- a/index.html
+++ b/index.html
@@ -3,7 +3,26 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="Study MBBS abroad in Russia, Uzbekistan, Kazakhstan, and more. Apply now for top medical programs with expert guidance!"
+    />
+    <meta
+      name="keywords"
+      content="MBBS abroad, study medicine overseas, affordable MBBS, medical universities"
+    />
+    <meta name="author" content="University Insights" />
+    <meta property="og:title" content="Study MBBS Abroad – Apply Now!" />
+    <meta
+      property="og:description"
+      content="Affordable MBBS programs in top international medical universities. Get expert assistance now!"
+    />
+    <meta property="og:image" content="https://yourwebsite.com/thumbnail.jpg" />
+    <meta property="og:url" content="https://yourwebsite.com" />
+    <meta name="robots" content="index, follow" />
+
     <title>Study MBBS Abroad</title>
+    <link rel="icon" type="image/svg+xml" href="titleEmg.svg" />
 
     <script
       async
